tests/sparql/test_suites/internal/ill-typed/good_queries/database/decimal.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  ?s :decimal ?o
}
ORDER BY ?s
